// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with reports and code conversion. Supports Lambda→Functions, Beanstalk/Heroku/App Engine→App Service, Fargate/Kubernetes/Cloud Run→Container Apps. WHEN: migrate Lambda to Functions, AWS to Azure, migrate Beanstalk, migrate Heroku, migrate App Engine, Cloud Run migration, Fargate to ACA, ECS/Kubernetes/GKE/EKS to Container Apps, cross-cloud migration.",
  "extractedKeywords": [
    "app service",
    "apps",
    "assess",
    "azure",
    "beanstalk",
    "cli",
    "cloud",
    "code",
    "container",
    "conversion",
    "cross-cloud",
    "deploy",
    "engine",
    "fargate",
    "function",
    "functions",
    "heroku",
    "kubernetes",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "reports",
    "service",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "apps",
  "assess",
  "azure",
  "beanstalk",
  "cli",
  "cloud",
  "code",
  "container",
  "conversion",
  "cross-cloud",
  "deploy",
  "engine",
  "fargate",
  "function",
  "functions",
  "heroku",
  "kubernetes",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "reports",
  "service",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
